tests/algorithms/x/Kotlin/ciphers/rsa_cipher.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/ciphers/rsa_cipher.kt:46:62: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@SinceKotlin @InlineOnly public inline fun Int.toBigInteger(): BigInteger defined in kotlin
@SinceKotlin @InlineOnly public inline fun Long.toBigInteger(): BigInteger defined in kotlin
@SinceKotlin @InlineOnly public inline fun String.toBigInteger(): BigInteger defined in kotlin.text
@SinceKotlin @InlineOnly public inline fun String.toBigInteger(radix: Int): BigInteger defined in kotlin.text
            result = ((((result).toBigInteger().multiply((b).toBigInteger())).remainder((modulus).toBigInteger())).toInt())
                                                             ^
/workspace/mochi/tests/algorithms/x/Kotlin/ciphers/rsa_cipher.kt:49:29: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@SinceKotlin @InlineOnly public inline fun Int.toBigInteger(): BigInteger defined in kotlin
@SinceKotlin @InlineOnly public inline fun Long.toBigInteger(): BigInteger defined in kotlin
@SinceKotlin @InlineOnly public inline fun String.toBigInteger(): BigInteger defined in kotlin.text
@SinceKotlin @InlineOnly public inline fun String.toBigInteger(radix: Int): BigInteger defined in kotlin.text
        b = (b.multiply((b).toBigInteger())).remainder((modulus).toBigInteger())
                            ^
/workspace/mochi/tests/algorithms/x/Kotlin/ciphers/rsa_cipher.kt:247:58: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@SinceKotlin @InlineOnly public inline fun Int.toBigInteger(): BigInteger defined in kotlin
@SinceKotlin @InlineOnly public inline fun Long.toBigInteger(): BigInteger defined in kotlin
@SinceKotlin @InlineOnly public inline fun String.toBigInteger(): BigInteger defined in kotlin.text
@SinceKotlin @InlineOnly public inline fun String.toBigInteger(radix: Int): BigInteger defined in kotlin.text
            if (((message.length).toBigInteger().add((i).toBigInteger())).compareTo((message_length).toBigInteger()) < 0) {
                                                         ^
